# systemshock

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt  readme.md  vcpkg.json
src/Libraries/: CMakeLists.txt
src/Libraries/3D/Source/: interp.c
